IDE update & new updates for code
Rewriting Menu + bugfixes for some things

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="checkout">Košarica</string>
     <string name="oaplk">O aplikaciji</string>
     <string name="refresh">Osvježi stranicu</string>
+    <string name="memorije">Memorija</string>
+    <string name="trazilica">Pretraži stranicu</string>
 
 <!-- TODO: Remove or change this placeholder text -->
 
