--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="vr">VR Naočale</string>
     <string name="dron">Dronovi</string>
     <string name="rac_oprema">Računalna periferija</string>
-    <string name="gadget">Gadgeti</string>
+    <string name="gadgetmemorija">Gadgeti i Memorije</string>
     <string name="about">O nama</string>
     <string name="poslovn">Prodajna mjesta</string>
     <string name="velepro">Veleprodaja</string>
