--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
 
 
     <string name="tablet">Oprema za tablet</string>
+    <string name="tablet_case">Preklopne futrole</string>
 
 
     <string name="drzaci">Adapteri i Držači</string>
